[package]
name = "stormcrow_utils"
version = "0.1.21"
edition = "2024"

[features]
default = []
mm2t-tx = []
mm2t-rx = []
full = ["mm2t-tx", "mm2t-rx"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
log = "0.4.29"
simplelog = "0.12.2"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.5"
